# gitr

./: Cargo.toml  LICENSE.txt  README.md
src/: main.rs
src/config/: mod.rs
src/executor/: mod.rs
