[package]
name = "gitr"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
colored = "2.0.4"
inquire = "0.6.2"
rustyline = "12.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
spinoff = "0.8.0"
